[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
mongodb = "2.3.0"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
futures = "0.3.27"
